hard-gists/8957990/run.log
=== Docker Run Log for 8957990 ===
Started at: Mi 29. Okt 18:05:35 CET 2025

[2025-10-29 18:05:35] START: Running container for 8957990
[2025-10-29 18:05:36] SUCCESS: Container 892ac2f0b9854f91cc9fea9f1a1149efc73bdb3d75c69c028d84d64affa7e7c1 started for 8957990
=== Container logs for 8957990 ===
  File "/snippet.py", line 9
    print 'The "window_description" command has been installed'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8957990 ===
[2025-10-29 18:05:38] INFO: Container 892ac2f0b9854f91cc9fea9f1a1149efc73bdb3d75c69c028d84d64affa7e7c1 has stopped
